SERVER-12422 cleanupOrphaned should not need remote metadata refresh if metadata exists